[package]
name = "poseidon-node"
version = "0.1.1"
authors = ["Sora Suegami"]
license = "MIT"
edition = "2018"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poseidon-rs = { path = "../poseidon" }
halo2curves = { version = "0.7.0", git = "https://github.com/privacy-scaling-explorations/halo2curves.git", ref = "8771fe5a5d54fc03e74dbc8915db5dad3ab46a83" }
hex = "0.4.3"
ff = { version = "0.13.0", default-features = false }

[dependencies.neon]
version = "0.10"
default-features = false
features = ["napi-6"]
